# CMakePPLang

./: .buildinfo  .cminx-config.yaml  .gitignore  .zenodo.json  AUTHORS.rst  CITATION.cff  CMakeLists.txt  CONTRIBUTING.rst  README.md  README.rst  authors.html  conventions.html  debugging.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  versioning.html
examples/cmakepplang_example/: CMakeLists.txt  build.sh
examples/cmakepplang_example/cmake/: get_cmake_test.cmake  get_cmakepp_lang.cmake
examples/cmakepplang_example/cmake/greeter/: greeter_class.cmake
examples/cmakepplang_example/tests/greeter/: test_greeter_class.cmake
tests/: CMakeLists.txt  classes.cmake  map.cmake
tests/algorithm/: CMakeLists.txt  contains.cmake  copy.cmake  equal.cmake
tests/array/detail_/: CMakeLists.txt  append.cmake  are_equal.cmake  as_list.cmake  back.cmake  bounds_check.cmake  copy.cmake  ctor.cmake  end.cmake  find.cmake  get.cmake  length.cmake  set.cmake
tests/asserts/: CMakeLists.txt  assert.cmake  divisible.cmake  greater_than_equal.cmake  less.cmake  signature.cmake  type.cmake
tests/class/: CMakeLists.txt  attr.cmake  class.cmake  ctor.cmake  end_class.cmake  member.cmake
tests/class/detail/: bases.cmake
tests/class/detail_/: CMakeLists.txt  add_overload.cmake  assert_class_is_registered.cmake  attr_dispatch.cmake  bases.cmake  class_guts.cmake  ctor.cmake  default_ctor.cmake  get_attrs.cmake  get_class_registry.cmake  get_fxns.cmake  get_overloads.cmake  register_member.cmake  write_wrapper.cmake
tests/detection/: languages.cmake
tests/docs/source/developer/: unit_testing.cmake
tests/docs/source/features/: maps.cmake  serialization.cmake
tests/docs/source/features/classes/: class_attributes.cmake  class_definition.cmake  define_extension_function.cmake  define_member_function.cmake  derived_class.cmake  function_overloading.cmake  pure_virtual_member_functions.cmake
tests/docs/source/features/exceptions/: basic_try_catch.cmake  handle_all_exceptions.cmake  handle_multiple_exception_types.cmake  nested_try_catch.cmake
tests/docs/source/getting_started/: obtaining_cmakepp_get_cpp.cmake  obtaining_cmakepplang_get_cmakepp_lang.cmake
tests/docs/source/getting_started/cmakepp_examples/: classes_adding_function_multiple_return_points.cmake  classes_adding_function_taking_argument.cmake  classes_adding_function_that_references_attributes.cmake  classes_adding_function_that_returns_value.cmake  classes_constructor_kwargs.cmake  classes_derived_class.cmake  classes_function_overloading.cmake  classes_function_return_value.cmake  classes_writing_basic_class.cmake
tests/docs/source/getting_started/cmakepp_examples/classes/: constructor_kwargs.cmake  constructor_user_defined.cmake  derived_class.cmake  function_arguments.cmake  function_multiple_return_points.cmake  function_multiple_return_points_vanilla.cmake  (+9 more)
tests/examples/: CMakeLists.txt  classes.cmake  functions.cmake  map.cmake  writing_a_class.cmake
tests/exceptions/: CMakeLists.txt  exceptions.cmake
tests/function/: CMakeLists.txt  function.cmake
tests/function/detail_/: CMakeLists.txt  add_overload.cmake  assert_not_ambiguous.cmake  call_overload.cmake  generate_assert.cmake  generate_call.cmake  generate_header.cmake  generate_signature.cmake  generate_wrapper.cmake  get_mangled_name.cmake  get_overloads.cmake  is_match.cmake  mangle_fxn.cmake
tests/iteration/: CMakeLists.txt  iterator.cmake
tests/logic/: CMakeLists.txt  are_equal.cmake  contains.cmake
tests/map/: CMakeLists.txt  append.cmake  copy.cmake  ctor.cmake  equal.cmake  get.cmake  has_key.cmake  keys.cmake  map.cmake  map_copy.cmake  map_equal.cmake  merge.cmake  remove.cmake  set.cmake  test_map.cmake  update.cmake
tests/map/detail_/: CMakeLists.txt  add_key.cmake  are_equal.cmake  assert_has_key.cmake  copy.cmake  ctor.cmake  get.cmake  has_key.cmake  key_mangle.cmake  keys.cmake  merge.cmake  set.cmake
tests/object/: CMakeLists.txt  add_fxn.cmake  attrs.cmake  call.cmake  copy.cmake  ctor.cmake  equal.cmake  get_meta_attr.cmake  get_symbol.cmake  object.cmake  object_copy.cmake  object_ctor.equal  object_equal.cmake  serialize.cmake  singleton.cmake  str_arg.cmake
tests/object/detail_/: CMakeLists.txt  add_base.cmake  add_function.cmake  add_fxn.cmake  add_overload.cmake  assert_has_member_fxn.cmake  ctor.cmake  equal.cmake  get_fxns.cmake  get_overloads.cmake  get_state.cmake  get_type.cmake  mangle_fxn.cmake  mangled_name.cmake  merge.cmake  set_attr.cmake  set_type.cmake
tests/overload/: CMakeLists.txt  ctor.cmake  is_match.cmake  is_variadic.cmake  n_required.cmake
tests/serialization/: CMakeLists.txt  serialization.cmake
tests/serialization/detail/: serialize_list.cmake  serialize_map.cmake  serialize_string.cmake  serialize_value.cmake
tests/serialization/detail_/: CMakeLists.txt  serialize_array.cmake  serialize_list.cmake  serialize_map.cmake  serialize_string.cmake  serialize_value.cmake
tests/stress_tests/: CMakeLists.txt  map.cmake  stress_map.cmake
tests/timer/: CMakeLists.txt  subtract_time.cmake  timer.cmake
tests/types/: CMakeLists.txt  bool.cmake  cmakepp_type.cmake  empty_string.cmake  filepath.cmake  float.cmake  fxn.cmake  get_type.cmake  get_types.cmake  identifier.cmake  implicitly_convertible.cmake  int.cmake  integer.cmake  is_callable.cmake  is_type.cmake  list.cmake  path.cmake  string.cmake  target.cmake  type.cmake  type_of.cmake  types.cmake
tests/types/detail_/: CMakeLists.txt  array.cmake  bool.cmake  filepath.cmake  float.cmake  int.cmake  integer.cmake  list.cmake  map.cmake  obj.cmake  path.cmake  target.cmake  type.cmake
tests/utilities/: CMakeLists.txt  are_equal.cmake  assert.cmake  call_fxn.cmake  check_conflicting_types.cmake  compare_lists.cmake  directory_exists.cmake  enable_if_debug.cmake  extract_args.cmake  file_exists.cmake  global.cmake  negate.cmake  pack_list.cmake  print_fxn_sig.cmake  protect_list.cmake  read_template.cmake  return.cmake  ternary_op.cmake  timer.cmake  tuple_iterator.cmake  unique_id.cmake
(+799 files in other folders)
